{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 41,
  "lineage": "be3f187e-c399-645f-1837-b774e969cf1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b48f09c568b0014",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-02fa8ff818b4c5a57",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fa8ff818b4c5a57",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-094c1c21cde975a9b",
            "private_dns": "ip-102-0-1-128.eu-west-1.compute.internal",
            "private_ip": "102.0.1.128",
            "public_ip": "34.253.188.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a51dcfccf413e8d1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a992fcc01b6a3d9b",
            "tags": {
              "Name": "Eng57.hussain.tf.app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0721ef352d84a43d9"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-app",
            "aws_subnet.subnet-pub",
            "aws_vpc.HussainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-055e37f60770b3a4a",
            "id": "igw-055e37f60770b3a4a",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Hussain.IG.TF"
            },
            "vpc_id": "vpc-0741ac49de29b0628"
          },
          "dependencies": [
            "aws_vpc.HussainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public-nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0ad4a7e4818f4b110",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0ad4a7e4818f4b110",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "Eng57.Hussain.NACL.pub.TF"
            },
            "vpc_id": "vpc-0741ac49de29b0628"
          },
          "dependencies": [
            "aws_vpc.HussainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-029b2af198b7c0230",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055e37f60770b3a4a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng57.Hussain.Pub.Route.TF"
            },
            "vpc_id": "vpc-0741ac49de29b0628"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.HussainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd79901aadb74f0d",
            "route_table_id": "rtb-029b2af198b7c0230",
            "subnet_id": "subnet-0a992fcc01b6a3d9b"
          },
          "dependencies": [
            "aws_route_table.route-pub",
            "aws_subnet.subnet-pub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0721ef352d84a43d9",
            "description": "Allow http and https traffic ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0721ef352d84a43d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "webApp-SG",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng57.Hussain.SG.TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-0741ac49de29b0628"
          },
          "dependencies": [
            "aws_vpc.HussainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0a992fcc01b6a3d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "102.0.1.0/24",
            "id": "subnet-0a992fcc01b6a3d9b",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Hussain.PubSub.TF"
            },
            "vpc_id": "vpc-0741ac49de29b0628"
          },
          "dependencies": [
            "aws_vpc.HussainVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "HussainVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0741ac49de29b0628",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "102.0.0.0/16",
            "default_network_acl_id": "acl-0ba4eb34cc14ae499",
            "default_route_table_id": "rtb-09a6d8aa4baf301cb",
            "default_security_group_id": "sg-0ff904e730ac903a8",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0741ac49de29b0628",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09a6d8aa4baf301cb",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.Hussain.VPC.TF"
            }
          }
        }
      ]
    }
  ]
}